This is the updated solution of the problem "Book Comparator".